<resources>
    <string name="app_name">CodePal</string>
    <string name="codepal_splash">You\'re\n with</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="login">Login</string>
    <string name="login_link"><u>Login instead</u></string>
    <string name="create_link"><u>Create New Account</u></string>
    <string name="create_btn">Create</string>
    <string name="username_hint">Enter your username here</string>
    <string name="password_hint">Enter your password here</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="search_hint">Search note...</string>
    <string name="notes_empty">No notes yet.\nTap + to create your first note!</string>
    <string name="chat_empty">No chat history yet.\nTap + to create your first conversation with <b>CodePal</b>!</string>
    <string name="show_password">Show Password</string>
    <string name="add_note_label">New Note</string>
    <string name="title_hint">Enter your title here</string>
    <string name="codepal_editor">CodePal Editor</string>
    <string name="chat_history">Chat History</string>
    <string name="new_chat">New Chat</string>
    <string name="codepal_assistant">CodePal Assistant</string>
    <string name="ask_about_python">Ask about Python...</string>
    <string name="btn_send">Send</string>
    <string name="logout_desc">Logout</string>
    <string name="notes_list">Notes List</string>
    <string name="note_title">Note Title</string>
    <string name="pin_icon">📌</string>
    <string name="note_preview_text">Note preview text...</string>
    <string name="placeholder_date">Jan 1, 2024</string>
    <string name="delete_account">Delete Account</string>
    <string name="convo_warning">Heads up! Your conversations are kept for up to 30 days. After that, they will be removed automatically.</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_your_email_address_here">Enter your email address here</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="account_profile">Account Profile</string>
    <string name="enter_your_new_email_address_here">Enter your new email address here</string>
    <string name="change_email">Change Email</string>
</resources>