<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForgotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/secondaryColor"
            android:fontFamily="sans-serif-black"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:ignore="TextViewEdits" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_your_email_address_here"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/codepal_input"
            android:padding="12dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/send_reset_link"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/codepal_button"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_link"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

</LinearLayout>