<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".NoteEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_arrow_top_left_24"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/codepal_editor"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/run"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_play_arrow_24"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:id="@+id/save"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_file_save_24"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:id="@+id/assistant"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon"
            android:contentDescription="@string/new_chat"
            android:layout_marginEnd="15dp"/>


    </LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/title_hint"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/codepal_input"
        android:padding="12dp"
        android:layout_margin="15dp"
        />

    <io.github.rosemoe.sora.widget.CodeEditor
        android:id="@+id/codeEditor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />

</LinearLayout>