<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    tools:context=".ConversationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_arrow_top_left_24"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/codepal_assistant"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="47dp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        >

        <EditText
            android:id="@+id/prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ask_about_python"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/codepal_input"
            android:padding="12dp"
            android:maxLines="4"
            android:inputType="textMultiLine|textCapSentences"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/btn_send"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/codepal_button"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

</LinearLayout>