<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ChatHistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_arrow_top_left_24"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chat_history"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="47dp"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Warning -->
        <TextView
            android:id="@+id/warningText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/codepal_warning"
            android:padding="12dp"
            android:textColor="@color/warning_text"
            android:textSize="14sp"
            android:text="@string/convo_warning"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Recycler -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            android:clipToPadding="false"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/warningText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Empty state -->
        <TextView
            android:id="@+id/emptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_empty"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/warningText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_add_2_24"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"
        app:fabSize="mini"
        app:backgroundTint="@color/primaryColor"
        app:tint="@color/black"
        android:contentDescription="@string/new_chat"
        />

</LinearLayout>