<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_arrow_top_left_24"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="15dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/outline_logout_24"
            android:contentDescription="@string/logout_desc"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_profile"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:visibility="gone"
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_your_new_email_address_here"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/codepal_input"
            android:padding="12dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/change_email"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/codepal_button"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</LinearLayout>